# csm

./: .gitignore  CMakeLists.txt  README  imgui.ini
.nix/: dev.nix  flake.nix  implot.nix  matplotplusplus.nix
src/: CMakeLists.txt  test.cxx
src/ch1/: CMakeLists.txt  distribution_of_money.cc  distribution_of_money.h  distribution_of_money2.cc  main.cc
